@@ -3,6 +3,8 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Fixed a bug which caused the measurement caches not to be updated when
+  GLC_RESOLUTION was changed by the users.
 - Fixed a memory leak in the management of the texture atlas: when a font was
   deleted, the memory allocated to this font in the atlas was definitely lost
   instead of being given back to the texture allocator.
